# Wallpaper-Lite

./: .gitignore  CMakeLists.txt  README.md  Wallpaper-Lite.rc  Wallpaper-Lite.sln  Wallpaper-Lite.vcxproj  Wallpaper-Lite.vcxproj.filters  core.cpp  imgui.ini  resource.h
src/: includes.hpp
src/menu/: menu.cpp  menu.hpp
src/menu/custom/: custom.hpp
src/utils/: utils.cpp  utils.hpp
